add novos arquivos da api e html

--- a/Site/public/filmes.html
+++ b/Site/public/filmes.html
@@ -37,13 +37,7 @@
         <h3>Descubra todo o Universo de Harry Potter</h3>
 
         <p>
-            Mais uma noite como todas as anteriores. Pego minha caneca de café cheia, acendo meu ultimo cigarro e corro
-            pra velha janela do quarto. Observo a noite fria e chuvosa, até parece confortável por um momento, se não
-            fossem as dezenas de preocupações que me desmotivam a cada dia.
-
-            Penso em você, mesmo sabendo o quão longe está de mim, sinto aquele amor que continua a me desgraçar
-            intensamente a cada dia, e penso quando enfim poderei te ter comigo. Sei lá, o café chega ao fim e trago a
-            ultima ponta, nada muda. É como se eu fosse passar por isso mais. <br>
+            Os amados romances de Harry Potter de JK Rowling ganharam vida nas telas em oito filmes de sucesso e inspiraram a série de filmes Fantastic Beasts, levando-nos a uma nova era do Mundo Mágico.. <br>
             ...
         </p>
 
@@ -59,7 +53,7 @@
     <div class="bannerfilmes">
 
         <div class="lineOne">
-            <div class="filmeOne filme"></div>
+            <a href="https://www.youtube.com/watch?v=7ZBh_-Aa0Bk" class="filmeOne filme"></a>
             <div class="filmeTwo filme"></div>
             <div class="filmeTree filme"></div>
             <div class="filmeFour filme"></div>
