--- a/Site/public/livros.html
+++ b/Site/public/livros.html
@@ -38,13 +38,7 @@
         <h3>Descubra todo o Universo de Harry Potter</h3>
 
         <p>
-            Mais uma noite como todas as anteriores. Pego minha caneca de café cheia, acendo meu ultimo cigarro e corro
-            pra velha janela do quarto. Observo a noite fria e chuvosa, até parece confortável por um momento, se não
-            fossem as dezenas de preocupações que me desmotivam a cada dia.
-
-            Penso em você, mesmo sabendo o quão longe está de mim, sinto aquele amor que continua a me desgraçar
-            intensamente a cada dia, e penso quando enfim poderei te ter comigo. Sei lá, o café chega ao fim e trago a
-            ultima ponta, nada muda. É como se eu fosse passar por isso mais. <br>
+            O primeiro livro de Harry Potter, Harry Potter e a Pedra Filosofal, foi publicado pela Bloomsbury em 1997, recebendo aclamação popular e crítica imediata. Seis outros livros mais vendidos, três livros complementares, um roteiro e dois roteiros seguiram-se desde então. Os livros de Harry Potter foram traduzidos para mais de 80 idiomas, ganharam vários prêmios e venderam mais de 500 milhões de cópias em todo o mundo, tornando-se a série de livros mais vendidos da história <br>
             ...
         </p>
 
@@ -60,7 +54,7 @@
     <div class="bannerlivros">
 
         <div class="lineOne">
-            <div class="livroOne livro"></div>
+            <a href="./assets/pdf/LivroCamaraSecreta.pdf" class="livroOne livro"></a>
             <div class="livroTwo livro"></div>
             <div class="livroTree livro"></div>
             <div class="livroFour livro"></div>
