--- a/Site/public/login.html
+++ b/Site/public/login.html
@@ -44,7 +44,7 @@
             </div>
 
         </form>
-        <button class="btn" onclick="entrar()">Cadastrar</button>
+        <button class="btn" onclick="entrar()">Entre</button>
         <div id="div_aguardar" class="loading-div">
             <img src="./assets/circle-loading.gif" id="loading-gif">
         </div>
