--- a/Site/public/cadastro.html
+++ b/Site/public/cadastro.html
@@ -28,6 +28,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="livros.html">Livros</a></li>
                 <li><a href="filmes.html">Filmes</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
                 <li>|</li>
                 <li><a class="active" href="">Cadastre-se</a></li>
                 <li><a href="login.html">Login</a></li>
