--- a/Site/public/filmes.html
+++ b/Site/public/filmes.html
@@ -24,6 +24,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="livros.html">Livros</a></li>
                 <li><a href="" class="active">Filmes</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
                 <li>|</li>
                 <li><a href="cadastro.html">Cadastre-se</a></li>
                 <li><a href="login.html">Login</a></li>
