--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -23,6 +23,7 @@
                 <li><a class="active" href="">Home</a></li>
                 <li><a href="livros.html">Livros</a></li>
                 <li><a href="filmes.html">Filmes</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
                 <li>|</li>
                 <li><a href="cadastro.html">Cadastre-se</a></li>
                 <li><a href="login.html">Login</a></li>
