--- a/Site/public/livros.html
+++ b/Site/public/livros.html
@@ -25,6 +25,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="" class="active">Livros</a></li>
                 <li><a href="filmes.html">Filmes</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
                 <li>|</li>
                 <li><a href="cadastro.html">Cadastre-se</a></li>
                 <li><a href="login.html">Login</a></li>
