--- a/Site/public/jogo.html
+++ b/Site/public/jogo.html
@@ -39,7 +39,7 @@
         <div id="instrucao">
             <p>
                 Quadribol, é um esporte fictício criado pela autora J. K. Rowling em sua série de ficção Harry Potter. A história da série centra-se em feiticeiros que estudam artes mágicas na Escola de Magia e Bruxaria de Hogwarts. Nascido fora da tradição de vassouras voadoras usadas por bruxas para transporte, o Quadribol foi desenvolvido pela autora como o esporte mais popular no universo de Harry Potter; um esporte complexo disputado completamente no ar por bruxos em vassouras voadoras. <br><br>
-                O jogo conta com 20 tentativas, onde há a possibilidade de acertos, erros e caso você tenha sorte ou otimas habilidades na vasoura o Pomo de Ouro, onde assim que conquistado a partida será finalizada e o jogador é dado como vencedor!
+                O jogo conta com 20 tentativas, onde há a possibilidade de acertos, erros e caso você tenha sorte ou otimas habilidades na vassoura o Pomo de Ouro, onde assim que conquistado a partida será finalizada e o jogador é dado como vencedor!
                 <br><br>
                 Boa sorte Bruxo!
             </p>
